# model-builder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
src/model_builder/: __init__.py  pipeline.py
src/model_builder/config/: schema.py
src/model_builder/eda/: analyzer.py
src/model_builder/evaluation/: README.md  __init__.py  evaluator.py
src/model_builder/feature_importance/: __init__.py  analyzer.py
src/model_builder/preprocessing/: preprocessor.py
src/model_builder/training/: README.md  __init__.py  base.py
src/model_builder/training/models/: __init__.py  logr.py  xgbc.py
src/model_builder/utils/: utils.py
tests/: test_analyzer.py  test_config.py  test_evaluator.py  test_feature_importance.py  test_logr.py  test_pipeline.py  test_preprocessor.py  test_xgbc.py
