[project]
name = "model-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jhull40" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
